Fixed padding on mobile sizing on .activity-title

--- a/style.css
+++ b/style.css
@@ -900,13 +900,11 @@ img {
   h4 {
     font-size: 14px;
     width: 90%;
-    padding-left: 1em;
   }
   h5 {
     width: 90%;
 
     font-size: 13px;
-    padding-left: 1em;
   }
   .activity {
     width: 100%;
